# esphome-native-api

./: .env.example  .gitignore  .releaserc  404.html  CONTRIBUTIG.md  Cargo.toml  LICENSE  Makefile  Native_API.md  README.md  api.proto  build.rs  docker-compose.yml  index.html  package-lock.json  package.json  sitemap.xml  test.py  test2.py
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  docs.yml  release.yml  restyled.yml  test.yml
assets/javascripts/: bundle.13a4f30d.min.js  bundle.50899def.min.js  bundle.79ae519e.min.js
documentation/: .gitignore  README.md  docker-compose.yml  mkdocs.yml
documentation/docs/: .nav.yml  index.md
documentation/docs/native_api/: bluetooth_proxy.md  encryption.md  general.md  index.md
documentation/overrides/partials/integrations/analytics/: custom.html
examples/: easy_server.rs  encrypted_server.rs  multi_version.rs  password_server.rs  server.rs  test_server.rs
examples/embassy/: Cargo.toml  README.md
examples/embassy/src/: main.rs
generator/: Cargo.toml
generator/src/: main.rs
generator/src/protos/: api.proto  api_options.proto
native_api/: index.html
native_api/bluetooth_proxy/: index.html
native_api/encryption/: index.html
native_api/general/: index.html
search/: search_index.json
src/: esphomeapi.rs  esphomeserver.rs  frame.rs  hash.rs  lib.rs  messages.rs  packet_encrypted.rs  packet_plaintext.rs  parser.rs  server.rs
src/proto/: .gitignore
tests/: .gitignore  README.md  conftest.py  esphomeapi_test.rs  pyproject.toml  pytest.ini  tox.ini  utils.py
tests-e2e/: README.md  pytest.ini
tests-e2e/api/: encrypted_server_test.py  generic_test.py
tests/api/: binary_sensor_test.py  button_test.py  device_info_test.py  encrypted_server_test.py  generic_test.py  password_test.py  sensor_test.py  switch_test.py
tests_e2e/: README.md  tox.ini
tests_e2e/api/: encrypted_server_test.py  generic_test.py
