[package]
name = "esphome-native-api"
version = "0.0.0"
edition = "2024"
license = "MIT"
keywords = ["esphome", "homeassistant"]
categories = ["api-bindings"]
homepage = "https://github.com/DanielHabenicht/esphome-native-api"
repository = "https://github.com/DanielHabenicht/esphome-native-api"
readme = "README.md"
description = "Another package for communication via esp home native API."
include = [
    "/LICENSE",
    "/README.md",
    "/Cargo.toml",
    "/Cargo.lock",
    "/src/*",
    "!/src/proto/.gitignore"
]

[dependencies]
log = "0.4"
tokio = { version = "1", features = ["full"] }
prost = "0.13.5"
typed-builder = "0.21.0"
constant_time_eq = "0.4.2"
base64 = "0.22.1"
noise-rust-crypto = "0.6.2"
noise-protocol = "0.2.0"
byteorder = "1.5.0"
tokio-util = { version = "0.7.17", features = ["codec"]  }
tokio-stream = "0.1.17"
bytes = "1.11.0"

[workspace]
resolver = "2"
members = ["generator"]

[dev-dependencies]
pretty_env_logger = "0.5.0"
test-log = { version = "0.2.16", features = ["log", "color"] }

[features]
default = ["std", "version_2025_12_1"]
std = []
version_2025_12_1 = []
version_2025_12_0 = []
version_2025_11_5 = []
version_2025_11_4 = []
version_2025_11_3 = []
version_2025_11_2 = []
version_2025_11_1 = []
version_2025_11_0 = []
version_2025_10_5 = []
version_2025_10_4 = []
version_2025_10_3 = []
version_2025_10_2 = []
version_2025_10_1 = []
version_2025_10_0 = []
version_2025_9_3 = []
version_2025_9_2 = []
version_2025_9_1 = []
version_2025_9_0 = []
version_2025_8_4 = []
version_2025_8_3 = []
version_2025_8_2 = []
version_2025_8_1 = []
version_2025_8_0 = []
version_2025_7_5 = []
version_2025_7_4 = []
version_2025_7_3 = []
version_2025_7_2 = []
version_2025_7_1 = []
