[project]
name = "tests"
version = "0.1.0"
requires-python = ">=3.10,<4.0"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)",
    "aioesphomeapi (>=30.1.0,<35.0.0)",
    "pytest-asyncio (>=0.26.0,<0.27.0)",
    "pytest-timeout (>=2.3.1,<3.0.0)"
]

[tool.poetry]
package-mode = false



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 160