[project]
name = "tests"
version = "0.1.0"
requires-python = ">=3.14,<4.0"
dependencies = [
    "pytest (>=9.0.2,<10.0.0)",
    "aioesphomeapi==43.0.0",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pytest-timeout (>=2.4.0,<3.0.0)",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.flake8]
max-line-length = 160
